Add metabolomics corr plot

--- a/readme.org
+++ b/readme.org
@@ -2272,103 +2272,118 @@ loaded via a namespace (and not attached):
 
 * Meta
 
-#+name: meta-pos
-|    | Phenacetyl-carnitine | 8-Dodecenoylcarnitine | 3-Oxohexadecanoic acid | Leucyl-Tryptophan | 18-Hydroxyarachidonic acid | Oleoylethanolamide | N-Demethyllysergic acid diethylamide | 9-Nitrooctadecenoic Acid | N-Demethylencainide | 13-Azaprostanoic acid | Prostaglandin E3 | Prostaglandin A2 | 11-Dehydro-thromboxane B2 | 20-Carboxy-leukotriene B4 | Heneicosanoic acid | N-Stearoyl phenylalanine | LysoPC(15:0/0:0) |   Swertiajaponin |  LysoPC(20:0/0:0) |   PE(14:0/P-16:0) |
-|    |                met_1 |                 met_2 |                  met_3 |             met_4 |                      met_5 |              met_6 |                                met_7 |                    met_8 |               met_9 |                met_10 |           met_11 |           met_12 |                    met_13 |                    met_14 |             met_15 |                   met_16 |           met_17 |           met_18 |            met_19 |            met_20 |
-|----+----------------------+-----------------------+------------------------+-------------------+----------------------------+--------------------+--------------------------------------+--------------------------+---------------------+-----------------------+------------------+------------------+---------------------------+---------------------------+--------------------+--------------------------+------------------+------------------+-------------------+-------------------|
-|  5 |     10.5172979899179 |      36.1788912860551 |       20.7184130315875 |  77.3399094248974 |           2.55336988640535 |   8.72379693468136 |                     38.9260100820759 |          41.624546805895 |    19.1834011621479 |      1.90494019816153 |  18.713722079198 | 15.2829688377178 |          52.4349013935745 |          15.2687521543544 |   8.32548216460397 |         18.8920227050081 |  1305.6783048135 | 293.656236621145 |  5.75306982607294 |  4.41624013749029 |
-|  6 |      3.5504907320426 |      10.1635068764908 |       23.3484046186122 |  103.712005872882 |           5.97486156297253 |   8.06412969513324 |                     14.7350137337019 |         18.6254101305985 |     28.627619239738 |      2.42462250134926 | 29.3632775890392 | 13.2115236434636 |          61.3504998920058 |          17.6377459215706 |   9.76118314800142 |         37.7626307576008 | 1918.30162500492 | 248.804986271785 |  9.89975382833156 |  1.66209987968102 |
-|  7 |       4.086059755039 |      28.2003212270307 |       50.9588157476719 |  203.864643721873 |           2.00418295187736 |   5.37146850468166 |                     43.7012136030534 |         28.5894765405155 |    19.1508658179457 |      5.68788002902314 |  45.400370207263 | 14.1250790139892 |          130.284522697653 |          50.8516074545834 |   12.1707128484913 |         14.8982335036034 | 109.710357589509 | 229.166582945829 |  5.25362814702676 |  7.38615221993735 |
-|  8 |     6.86516875996168 |      5.35075836271371 |       17.0866873632257 |  111.125418460388 |           3.47532869075245 |   3.66524324562298 |                     4.07023383137963 |         15.4310655709651 |    15.2383803556913 |      2.18225239640904 | 24.6896683748983 | 19.1725603307427 |          35.1602669870688 |          13.7908876231205 |   7.30282603286126 |         30.3640693182491 | 1367.19883140034 | 254.060904432543 |  8.80313228871176 |  4.24771190580784 |
-| 10 |     3.59690886871043 |       44.311176630816 |       51.0409970356772 |  190.566091191183 |          0.821742445377564 |   4.48039973661737 |                     54.0847379296692 |         41.8082138523749 |     13.414926501424 |      1.36048701551228 | 46.7768042669116 | 20.7370175718793 |          140.901386362421 |          51.7465671625091 |   5.71628554399682 |         31.7010545824733 | 907.289742716007 | 595.372952852531 |  8.32181502491446 | 0.964259289641308 |
-| 11 |     4.03847308425001 |      14.1546397857123 |       29.0848402982316 |  183.729488633547 |          0.493103334419495 |   6.98354767995563 |                      20.417999093447 |         31.8527710995865 |    11.6916238762667 |      2.49528354909315 | 37.2677470930401 | 12.4822682960904 |           79.176040705043 |          46.9674940633535 |      5.00526356066 |         44.3766524646939 | 1812.39943636314 | 297.250359127221 |   7.9656849026174 | 0.681678213334941 |
-| 15 |     3.78204909361323 |      13.4422813849678 |       18.8734483072275 |  110.037638702093 |           2.99975892212848 |   3.61659382408782 |                     7.13328539545674 |         29.9728491507471 |    7.48604302943171 |      1.02531028608356 | 24.6416773765096 | 19.2076077627388 |          45.0927636567739 |          42.1056978886004 |   4.53015923603005 |         40.0221754437986 |  2062.6922929688 | 320.256364033058 |  11.8460029657342 |  0.46916348435278 |
-|  3 |     14.1061240046444 |      2.41248016643406 |       7.91526878617632 |  65.7125335152011 |           3.21992978149207 |    22.863207295614 |                     3.54619672765061 |          14.103039060344 |    50.6609419796624 |      11.1158514235352 | 10.5859265216849 | 18.0101997950403 |           14.721485427464 |          5.53102397337405 |   21.9996440415174 |         6.33029560103037 | 1264.82066366564 | 1.61450625322501 |  2.41108126371011 |  36.5393020239395 |
-|  4 |     15.4813609928192 |      8.38264470483788 |       18.8049214181512 |   41.888351131347 |           22.5761342332244 |   16.9491425256008 |                     10.6054212689192 |         30.4166604883951 |     38.753258884989 |      4.35171439310585 | 19.6650207958745 | 30.7393045683532 |          51.1796552078986 |          29.4582722093191 |   11.0979769563542 |         4.36576324067651 | 932.767470850172 | 10.8574719917685 | 0.753937916691279 |  17.7570613074161 |
-|  9 |     9.06408457645127 |     0.971454923212576 |       7.88570937673076 |   27.373261017189 |           6.45187796349513 |   20.1726332936676 |                     0.91369640761166 |         12.2071156906719 |    42.2447592816247 |      7.92792380799274 | 12.9327832136168 | 29.7047884852389 |          14.0508831946182 |           10.181066061302 |   17.9862133156078 |         5.64873340878064 | 1283.47921103612 | 128.683075584418 |  1.83239832875712 |  22.0013923725006 |
-| 12 |     19.7319220935964 |      9.99648064296353 |       16.4216628173955 |  32.2829785922131 |           23.8108647000057 |   17.1909484384689 |                     8.41273026427396 |         6.18576220224722 |     35.149043281336 |      4.33359193798093 | 16.1421532061276 | 49.8559047522185 |          42.3134459185911 |          14.1273663613475 |   11.7663571194135 |         10.2969679879995 | 128.020192960756 | 152.119102999108 |  1.17740068767921 |  24.8472277507531 |
-| 13 |     16.0870771931618 |      11.3220466127798 |       13.6850347726927 |  49.6216859774051 |           10.7020429994878 |   19.7799694818111 |                     9.22472582974032 |         6.36191011427493 |    66.1800518608968 |       8.2208075043718 | 24.5629246443777 | 50.2271972757257 |          34.2884232647478 |           15.009021663326 |   19.5947178439124 |         17.6196148790115 | 131.006699574153 |  201.45924212504 |  2.49896900213013 |  27.7114325284927 |
-| 16 |     12.6837379155064 |      1.96025470847528 |       5.71290418166318 |  83.9365602217399 |            6.7048640929654 |   23.6022476357888 |                     1.13901726802695 |         13.2647020000932 |    39.3820487343644 |      10.0341756238631 | 7.43015645663292 |  48.953390632663 |          14.5480820895686 |          11.1891605272678 |    14.261724767186 |         22.1988672237979 | 156.636594234706 |  255.88721979561 |  1.07098714646585 |  14.6815856429194 |
-| 18 |     5.99555565497036 |      11.3052785846449 |       24.3737802021152 |   69.357091040794 |           9.48767187012127 |   20.2927634907371 |                     11.3254051361628 |         18.5043802942108 |    26.1568435991368 |       4.1780581243584 | 19.4465697585065 | 60.9806159040711 |          55.8129123962482 |          18.3888657774003 |   9.13429169340552 |         31.4825177083574 | 172.862817670307 | 230.975251589327 |  4.18824389665335 |  24.2193550960826 |
-|    |                      |                       |                        |                   |                            |                    |                                      |                          |                     |                       |                  |                  |                           |                           |                    |                          |                  |                  |                   |                   |
-
-#+name: meta-neg
-|    |       Malic acid |  Undecanoic acid |       Tryptophan | Tridecanoic acid | xi-7-Hydroxyhexadecanedioic acid | Leucyl-Tryptophan |  Floionolic acid | 9-Oxo-nonanoic acid | Enterodiol sulfate | 6-Ketoprostaglandin E1 | Prostaglandin E3 | 15-Keto-prostaglandin E2 | Prostaglandin E2 | Prostaglandin D2 | 11-Dehydro-thromboxane B2 |   Thromboxane B2 | Lithocholic acid glycine conjugate | Deoxycholylserine |
-|  5 | 260.699375983215 | 45.3841057446514 | 7.10186615736387 |  43.162985975278 |                 27.7644683733382 |  29.2820697759444 | 17.7448979535434 |    8.91771242802742 |   31.3041872007235 |       39.0201316406824 | 33.5814939776496 |         36.9264939138414 | 23.8030169547821 | 70.4678874424656 |          37.1352118963927 | 16.1903741280102 |                   9.67300382920333 |  6.24857421143803 |
-|  6 | 532.589656517069 | 10.6639536592136 | 7.11090856976055 | 14.6526994656237 |                 12.6975839963677 |  49.3670344133392 | 20.7345461963993 |    6.69050364715592 |   93.0502801335415 |       35.8016844666265 | 66.6780383145954 |         86.9069598213936 | 358.790462011407 | 208.118590691001 |          125.993126499147 | 33.0807942143391 |                   28.6498919300842 |  32.0732300671689 |
-|  7 | 253.089761740446 | 25.0642774410905 |  5.1372609475433 | 27.8191266744039 |                 46.3231578161197 |  90.7372954420744 | 39.0545377475541 |    11.9899914842712 |    296.67976408483 |       80.1118741585321 |  31.049033354727 |         47.2309036377651 | 223.588255358216 | 62.3013335537999 |          60.3921949349961 | 9.41574369950339 |                   62.3198138410922 |  24.0819983495633 |
-|  8 | 262.546530472719 | 2.91392774807013 | 3.48561189842701 | 4.10562907525903 |                 8.95871280486725 |  42.1053358922433 | 4.86461455087117 |    3.66370495552988 |   142.786415893814 |       18.6231844992301 | 73.7525457920129 |         83.9128098469731 | 331.631670442271 | 80.0077691805397 |          83.4798989690728 | 34.3973390324073 |                   72.8033616317055 |  60.2320519593289 |
-| 10 |  299.16939378278 |  47.775816547394 | 3.08728860363711 | 52.5511264888521 |                 67.0949823823717 |  62.1619689909977 | 51.4387259295214 |    17.6539831152768 |   36.8466718284724 |       103.056712476902 | 18.7047271715676 |         20.3635875441151 |  92.047522745191 | 26.1763160040817 |          23.0616395305257 | 3.03459400105391 |                   111.694893906688 |  96.6756321394154 |
-| 11 | 222.980123946768 | 16.3682460961244 |  3.4688954927867 | 19.6302477962723 |                 34.6559547776226 |  83.4075699653923 | 15.8333291345621 |    5.84560438129172 |   274.828426552208 |       47.3797124352512 | 103.919731145988 |         70.5084549418264 |  391.28249669426 |  83.222091747097 |          56.6300420072617 | 16.6410944275302 |                   69.8090051804258 |  94.0867242961228 |
-| 15 | 534.100710071907 | 12.0197594571812 | 5.61282731399948 | 7.97275113258451 |                 15.2804534446216 |  36.8993922452931 | 8.08175098882079 |    2.54202443910541 |   254.614980214698 |       26.3729845228155 | 89.1636220000827 |         67.3486709314022 | 178.293097540702 | 116.161943533497 |           88.700302491423 |   13.04021848395 |                   55.2319654451022 |  31.0952839047685 |
-|  3 | 509.771789533466 | 1.41625292249734 | 14.3126840950096 | 4.63572410445256 |                 3.24330225986598 |  25.9159309606626 | 1.97349342407035 |    1.00236829317745 |   6.26857923832167 |       10.1694046338107 | 49.1048567179522 |         28.8885494505306 | 121.655740943403 | 33.6221286405377 |          30.3636833441862 |  4.1683973656961 |                   11.6000709672912 |  6.12874129251359 |
-|  4 | 723.110156030178 | 5.40853154127914 | 15.0275198028364 | 6.57809768209679 |                 13.7823878471493 |  17.1938894878859 | 6.92957821850164 |    6.02114852231823 |   38.6970271811194 |        25.407692767302 | 19.7321562309228 |         17.0068191326859 | 45.2241187005247 | 21.4349454450155 |          31.3157656863728 | 4.32731954059016 |                   12.3636786691893 |  3.35426932518592 |
-|  9 | 700.036939111624 | 2.44374427782417 | 11.0598515812786 | 2.97326960745334 |                 3.20573383951954 |  11.7403427305873 | 1.29767789078823 |    1.47271211419502 |   43.9071404457349 |       10.0583012943922 |   43.54684804624 |         42.9084559884536 | 181.234662355433 | 44.3080868893125 |          41.8771940047099 | 6.76996851904234 |                   17.4162461093531 |  10.8860492318952 |
-| 12 |  1471.3925114225 | 5.55291309268415 | 16.2204940097802 | 6.09643387126622 |                 12.0548132331476 |  9.68638027942557 |  2.8173529661485 |     4.5986254844192 |   65.3712529591634 |       26.5232089690004 |  28.496839689419 |         35.8773906273257 | 130.137054787162 | 46.0874573029247 |          36.0428007366068 |  7.7924006598614 |                   28.9928417408844 |  5.62864445312608 |
-| 13 | 418.228552116927 | 5.24137727244866 |  9.2325545981184 | 9.21575009078204 |                 10.6877630782807 |  16.6003216508932 | 8.41701018886085 |     3.1448711580416 |   15.3430099791641 |       19.3409504821627 | 18.6444874772557 |         19.3601031108993 | 66.2319103337042 | 21.4915427095821 |          36.5848417980176 | 7.90425008669809 |                   30.0904437827084 |  44.7385521108499 |
-| 16 | 636.508369633382 | 2.57674309450993 | 4.35810057591986 |  2.8891764195999 |                 2.71329860753932 |  26.2041884312651 | 3.00777299877994 |    1.67927164087583 |   5.48523629763835 |       6.86824350311469 | 11.8092278356111 |          13.916339089211 | 19.6530619817724 | 12.9367228111768 |          18.6703608115594 | 1.38121970780337 |                   14.0371447779969 |  20.7089090881697 |
-| 18 | 417.893208768507 | 13.8341028440854 | 4.80034029033776 | 13.1176523463539 |                 21.3555585209663 |  26.6365514310064 | 15.2927473965831 |    4.49489242450915 |   66.3103544167297 |       46.8761706311912 | 28.2408023977673 |          23.285041096358 | 44.6537685383417 | 33.9647059708116 |           35.872344393016 | 3.80147271808378 |                   28.2281469601623 |  19.1046124421036 |
-
-#+name: phys
-| Sample # |   ID | Hair_Coat | Lactation | DIM |    BW |           DHI_MY |           Temp_C | RI_Avg |           PI_Avg |           Dia_Avg |        MBF_Total |          MBF_Avg |
-|        8 |  466 | P         |         4 | 174 |   596 | 31.8181818181818 | 36.5925925925926 | 0.5725 |           0.8725 |              1.45 | 9762.97130330809 | 4881.48565165404 |
-|       10 | 2041 | P         |         3 | 176 |   521 | 20.4545454545455 | 38.7222222222222 |  0.555 |            1.035 |             1.355 | 9187.04577464789 | 4593.52288732394 |
-|        4 | 2058 | R         |         2 | 114 |   485 | 21.3636363636364 | 35.4814814814815 |   0.64 | 1.12333333333333 |  1.25666666666667 | 11153.7412247946 | 5576.87061239731 |
-|        9 | 2068 | R         |         2 | 176 | 538.5 | 21.3636363636364 | 35.7962962962963 | 0.6475 |            1.235 |            1.1475 |  3312.7559618442 |  1656.3779809221 |
-|       16 | 2089 | R         |         2 | 182 |   479 | 16.8181818181818 | 37.8518518518518 |   0.63 | 1.16666666666667 | 0.823333333333333 |  1625.3256302521 | 812.662815126051 |
-|        3 | 2116 | R         |         2 | 209 | 492.5 | 19.0909090909091 | 39.1296296296296 | 0.6375 |           1.0725 |            1.2925 | 8667.54660464308 | 4333.77330232154 |
-|       11 | 2128 | P         |         2 | 174 |   592 | 24.5454545454545 | 38.3888888888889 | 0.6275 |           1.1825 |            1.6225 | 12910.3203225806 | 6455.16016129032 |
-|        6 | 2129 | P         |         2 | 180 | 570.5 |               20 | 38.6481481481481 |   0.66 | 1.13666666666667 |  1.21333333333333 | 5921.35555244363 | 2960.67777622182 |
-|        5 | 2171 | P         |         2 | 173 | 524.5 | 21.8181818181818 | 39.2407407407407 | 0.4375 |           0.6275 |            1.0975 | 10207.6951871658 | 5103.84759358289 |
-|       18 | 2179 | R         |         1 | 112 |   540 | 20.4545454545455 | 39.7777777777778 |   0.59 |           1.0125 |            1.1125 | 5133.00626959248 | 2566.50313479624 |
-|        7 | 2202 | P         |         2 | 175 |   501 | 20.9090909090909 | 37.5740740740741 | 0.5275 |             0.95 |              1.32 | 7686.11229946524 | 3843.05614973262 |
-|       13 | 2226 | R         |         1 | 199 | 486.5 | 18.1818181818182 | 36.3333333333333 | 0.6025 |            1.045 |            0.8825 | 3516.30685520205 | 1758.15342760103 |
-|       12 | 2273 | R         |         1 | 112 | 441.5 | 20.9090909090909 | 38.7592592592593 |   0.74 |           1.4325 |            1.0175 | 2568.20747492048 | 1284.10373746024 |
-|       15 | 2287 | P         |         1 |  92 | 467.5 | 26.8181818181818 | 39.4814814814815 | 0.5125 |           0.7375 |            1.0925 | 7591.77386237514 | 3795.88693118757 |
-
-#+begin_src R :session new :var meta=meta-pos :var phys=phys :var neg=meta-neg
+#+header: :results output file graphics :file meta.corr.png
+#+header: :width 11 :height 11 :units in :res 150
+#+begin_src R :session metab
+library(Hmisc)
 library(tidyverse)
-library(corrplot)
 library(cowplot)
-colnames(meta) <- meta[1,]
-meta <- meta[-1,]
-meta <- meta[-1,]
-colnames(phys) <- phys[1,]
-phys <- phys[-1,]
 
-rownames(phys) <- phys[,1]
-phys <- phys[,-c(1,2,3)]
-rownames(meta) <- meta[,1]
-meta <- meta[,-1]
+metabolites <-
+  read.delim("meta.data.tbl", nrows = 1) %>% select(-c(1:8)) %>% c %>% unlist
 
-phys <- as.nu
+data <- read.delim("meta.data.tbl", skip=1) %>%
+  rename(setNames(make.names(metabolites), names(metabolites)),
+         Sample="Sample..")
 
-meta
-neg
-colnames(neg) <- neg[1,]
-neg <- neg[-1,]
+meta.data <- data[,c(1:3)]
+phys <- data %>%
+  select(1, c(4:8)) %>%
+  column_to_rownames("Sample") %>%
+  mutate_all(as.numeric)
+metab <- data %>%
+  select("Sample", names(metabolites)) %>%
+  column_to_rownames("Sample") %>%
+  mutate_all(as.numeric)
 
-row.names(neg)<- neg[,1]
-neg <- neg[,-1]
+cor.data <- rcorr(as.matrix(metab), as.matrix(phys), type="spearman") %>%
+  lapply('[', names(metabolites), names(phys)) %>%
+  lapply(as.data.frame) %>%
+  lapply(rownames_to_column, "ID") %>%
+  bind_rows(.id='Type') %>%
+  gather( "Variable", "val", -ID, -Type ) %>%
+  spread(Type, val) %>%
+  mutate(color = fct_recode(cut(P, breaks=c(-Inf, 0.01, 0.05 , Inf))),
+         Variable = factor(Variable, levels=c("MY", "VT", "RI", "Diameter", "Total_MBF")),
+         ID = factor(ID, levels=names(sort(metabolites))),
+         set = as.numeric(ID) %% 2)
 
+levels(cor.data$color) <- c("<=0.01", "0.01<x<=0.05", ">0.05")
 
-cor.neg <- cor(mutate_all(neg[order(row.names(neg)),], as.numeric),
-               mutate_all(phys[order(row.names(phys)),], as.numeric),
-               method = "spearman")
-cor.neg
+metabolite.labels <- setNames(sprintf("%s\n%s", names(sort(metabolites)), sort(metabolites)), names(sort(metabolites)))
+plot <- ggplot(cor.data, aes(Variable, ID,
+                     size=abs(r), alpha=abs(r), fill=r,
+                     color=color)) +
+  geom_point(shape=21, stroke=2) +
+  scale_x_discrete(position = 'top') +
+  scale_y_discrete(limits=rev, labels=metabolite.labels) +
+  scale_alpha_continuous(guide='none') +
+  scale_size_continuous(guide='none', range=c(1,15)) +
+  scale_fill_distiller( palette = 'RdBu', direction = 1,
+                        guide = guide_colorbar(barwidth=25), name='Correlation') +
+  scale_color_manual(values=c("#D4A10D", "#848284", 'white'), name="Significance") +
+  facet_wrap(set~., scales="free", ncol=2) +
+  theme_minimal() +
+  theme(axis.title = element_blank(),
+        panel.grid = element_blank(),
+        strip.background = element_blank(),
+        strip.text.x = element_blank(),
+        legend.position = 'none',
+        legend.box="vertical")
 
-corrplot(cor(mutate_all(neg[order(row.names(neg)),], as.numeric),
-             mutate_all(phys[order(row.names(phys)),], as.numeric),
-             method = "spearman"), method='number'
-         )
+plot_grid(plot, get_legend(plot + theme(legend.position = 'bottom')), nrow = 2, rel_heights = c(1, 0.1))
 
+#corrplot(cor(metab, phys, method = "spearman"))
 
-corrplot(cor(mutate_all(meta[order(row.names(meta)),], as.numeric),
-             mutate_all(phys[order(row.names(phys)),], as.numeric),
-             method = "spearman")
-         )
-
-install.packages('rstatix')
 #+end_src
 
 #+RESULTS:
+[[file:meta.corr.png]]
+
+#+begin_src R :session metab :results output org
+options(asciiType = "org")
+mutate(cor.data, value = sprintf("%.03f (%.03f)", r, P)) %>%
+  select(ID, Variable, value) %>%
+  spread("Variable", "value") %>%
+  ascii::ascii()
+
+#+end_src
+
+#+RESULTS:
+| ID | MY          | VT             | RI             | Diameter       | Total_MBF      |                |
+|----+-------------+----------------+----------------+----------------+----------------+----------------|
+|  1 | HMDB0003175 | 0.582 (0.029)  | -0.358 (0.208) | -0.090 (0.759) | 0.451 (0.106)  | 0.262 (0.366)  |
+|  2 | HMDB0006245 | -0.337 (0.238) | 0.174 (0.553)  | 0.604 (0.022)  | -0.613 (0.020) | -0.574 (0.032) |
+|  3 | HMDB0244869 | 0.710 (0.004)  | 0.020 (0.946)  | -0.477 (0.085) | 0.380 (0.180)  | 0.530 (0.051)  |
+|  4 | HMDB0245244 | -0.412 (0.143) | 0.266 (0.358)  | 0.705 (0.005)  | -0.495 (0.072) | -0.569 (0.034) |
+|  5 | HMDB0037544 | -0.710 (0.004) | 0.332 (0.246)  | 0.319 (0.267)  | -0.622 (0.018) | -0.547 (0.043) |
+|  6 | HMDB0036169 | 0.591 (0.026)  | -0.248 (0.392) | 0.051 (0.864)  | 0.143 (0.626)  | 0.200 (0.493)  |
+|  7 | HMDB0000528 | 0.822 (0.000)  | -0.196 (0.503) | -0.204 (0.483) | 0.125 (0.670)  | 0.332 (0.246)  |
+|  8 | HMDB0062738 | 0.406 (0.150)  | -0.138 (0.637) | -0.565 (0.035) | 0.516 (0.059)  | 0.785 (0.001)  |
+|  9 | HMDB0000201 | 0.026 (0.928)  | 0.530 (0.051)  | 0.446 (0.110)  | -0.451 (0.106) | -0.284 (0.326) |
+| 10 | HMDB0040551 | 0.157 (0.593)  | -0.235 (0.418) | -0.644 (0.013) | 0.569 (0.034)  | 0.543 (0.045)  |
+| 11 | HMDB0304536 | -0.348 (0.222) | 0.121 (0.681)  | 0.407 (0.149)  | -0.516 (0.059) | -0.640 (0.014) |
+| 12 | HMDB0002212 | -0.774 (0.001) | 0.059 (0.840)  | 0.415 (0.140)  | -0.420 (0.135) | -0.451 (0.106) |
+| 13 | HMDB0000063 | -0.042 (0.887) | 0.275 (0.342)  | 0.015 (0.958)  | -0.398 (0.159) | -0.538 (0.047) |
+| 14 | HMDB0001051 | -0.329 (0.251) | 0.284 (0.326)  | 0.697 (0.006)  | -0.411 (0.144) | -0.569 (0.034) |
+| 15 | HMDB0000131 | -0.013 (0.964) | 0.666 (0.009)  | 0.323 (0.260)  | -0.503 (0.067) | -0.266 (0.358) |
+| 16 | HMDB0010381 | 0.545 (0.044)  | -0.160 (0.584) | -0.099 (0.737) | 0.301 (0.296)  | 0.442 (0.114)  |
+| 17 | HMDB0010390 | 0.404 (0.152)  | -0.688 (0.007) | -0.530 (0.051) | 0.376 (0.185)  | 0.349 (0.221)  |
+| 18 | HMDB0000156 | -0.236 (0.417) | 0.367 (0.197)  | 0.675 (0.008)  | -0.565 (0.035) | -0.569 (0.034) |
+| 19 | HMDB0242001 | 0.214 (0.463)  | -0.618 (0.019) | -0.051 (0.864) | 0.147 (0.615)  | -0.007 (0.982) |
+| 20 | HMDB0255110 | -0.659 (0.010) | 0.407 (0.149)  | 0.600 (0.023)  | -0.468 (0.091) | -0.508 (0.064) |
+| 21 | HMDB0062342 | 0.181 (0.536)  | -0.710 (0.004) | -0.385 (0.175) | 0.178 (0.543)  | 0.178 (0.543)  |
+| 22 | HMDB0002088 | -0.670 (0.009) | 0.420 (0.135)  | 0.516 (0.059)  | -0.495 (0.072) | -0.530 (0.051) |
+| 23 | HMDB0013648 | -0.461 (0.097) | 0.341 (0.233)  | 0.459 (0.098)  | -0.675 (0.008) | -0.670 (0.009) |
+| 24 | HMDB0002100 | -0.723 (0.003) | 0.376 (0.185)  | 0.376 (0.185)  | -0.477 (0.085) | -0.451 (0.106) |
+| 25 | HMDB0029006 | 0.549 (0.042)  | -0.209 (0.474) | -0.468 (0.091) | 0.578 (0.030)  | 0.530 (0.051)  |
+| 26 | HMDB0002752 | -0.364 (0.201) | 0.037 (0.899)  | 0.200 (0.493)  | -0.626 (0.017) | -0.596 (0.025) |
+| 27 | HMDB0001403 | 0.598 (0.024)  | -0.398 (0.159) | -0.182 (0.533) | 0.301 (0.296)  | 0.262 (0.366)  |
+| 28 | HMDB0001442 | 0.542 (0.045)  | -0.363 (0.203) | -0.081 (0.782) | 0.213 (0.464)  | 0.204 (0.483)  |
+| 29 | HMDB0001220 | 0.426 (0.129)  | -0.327 (0.253) | 0.169 (0.563)  | 0.600 (0.023)  | 0.222 (0.446)  |
+| 30 | HMDB0002664 | 0.659 (0.010)  | -0.108 (0.714) | -0.073 (0.805) | 0.481 (0.081)  | 0.415 (0.140)  |
+| 31 | HMDB0030569 | 0.289 (0.317)  | -0.495 (0.072) | -0.618 (0.019) | 0.112 (0.703)  | 0.244 (0.401)  |
+| 32 | HMDB0003252 | 0.602 (0.023)  | -0.310 (0.281) | -0.169 (0.563) | 0.297 (0.303)  | 0.385 (0.175)  |
+| 33 | HMDB0014447 | -0.234 (0.421) | 0.402 (0.154)  | 0.679 (0.008)  | -0.596 (0.025) | -0.648 (0.012) |
+| 34 | HMDB0000929 | -0.157 (0.593) | 0.473 (0.088)  | 0.578 (0.030)  | -0.407 (0.149) | -0.275 (0.342) |
+| 35 | HMDB0029090 | 0.452 (0.105)  | -0.182 (0.533) | -0.301 (0.296) | 0.640 (0.014)  | 0.398 (0.159)  |
