--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+title: SLICK Holstein mammary gland RNA-Seq methods
 #+AUTHOR:
 #+OPTIONS: ^:{}
-#+PROPERTY:  header-args :var DIR=(my/dir) :eval no-export :exports both
+#+PROPERTY:  header-args:sh :var DIR=(my/dir) :eval no-export :exports both
 #+HTML_HEAD: <style> img {max-width:100%} </style>
 #+LATEX_HEADER: \usepackage{minted}
 
@@ -907,7 +907,7 @@ loaded via a namespace (and not attached):
 
 * EdgeR w/o Outlier
 ** Load data
-#+begin_src R :session bovine.rm :results output ignore
+#+begin_src R :session bovine.rm
 library(edgeR)
 library(statmod)
 library(tximport)
@@ -947,37 +947,6 @@ txi <- tximport(files, type = "salmon", tx2gene = tx2gene)
   #+end_src
 
   #+RESULTS:
-  #+begin_example
-  Loading required package: limma
-  data.table 1.14.6 using 4 threads (see ?getDTthreads).  Latest news: r-datatable.com
-  ── [1mAttaching packages[22m ──────────────────────────────────────────────────────────────── tidyverse 1.3.2 ──
-  [32m✔[39m [34mggplot2[39m 3.4.0     [32m✔[39m [34mpurrr  [39m 1.0.1
-  [32m✔[39m [34mtibble [39m 3.1.8     [32m✔[39m [34mdplyr  [39m 1.1.0
-  [32m✔[39m [34mtidyr  [39m 1.3.0     [32m✔[39m [34mstringr[39m 1.5.0
-  [32m✔[39m [34mreadr  [39m 2.1.3     [32m✔[39m [34mforcats[39m 1.0.0
-  ── [1mConflicts[22m ─────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-  [31m✖[39m [34mdplyr[39m::[32mbetween()[39m   masks [34mdata.table[39m::between()
-  [31m✖[39m [34mdplyr[39m::[32mfilter()[39m    masks [34mstats[39m::filter()
-  [31m✖[39m [34mdplyr[39m::[32mfirst()[39m     masks [34mdata.table[39m::first()
-  [31m✖[39m [34mdplyr[39m::[32mlag()[39m       masks [34mstats[39m::lag()
-  [31m✖[39m [34mdplyr[39m::[32mlast()[39m      masks [34mdata.table[39m::last()
-  [31m✖[39m [34mpurrr[39m::[32mtranspose()[39m masks [34mdata.table[39m::transpose()
-
-  Attaching package: ‘ascii’
-
-  The following object is masked from ‘package:tidyr’:
-
-      expand
-  |--------------------------------------------------|
-  |==================================================|
-  reading in files with read_tsv
-  1 2 3 4 5 6 7 8 9 10 11 12 13
-  removing duplicated transcript rows from tx2gene
-  transcripts missing from tx2gene: 12558
-  summarizing abundance
-  summarizing counts
-  summarizing length
-  #+end_example
 
 ** Normalize counts, Filter Genes, and Estimate Dispersions
 #+begin_src R :session bovine.rm :results output
@@ -2152,7 +2121,7 @@ $`GO:0051302 - regulation of cell division`
 *** Figure
 
 #+header: :results output file graphics :file heatmap.go.png
-#+header: :width 20 :height 10 :units in :res 150
+#+header: :width 20 :height 10 :units in :res 600
 #+begin_src R :session bovine.rm
 counts.per.million <- cpm(y) %>%
   as.data.frame %>%
@@ -2177,7 +2146,7 @@ go.plots <- mapply(function(data, name) {
            product = sub(', transcript variant X[1-9]', '', URLdecode(product))) %>%
     ggplot(aes(sample, product, alpha=cpm, fill=group)) +
     geom_tile(color='grey') +
-    geom_text(aes(label=sprintf("%0.1f", cpm)), alpha=1) n+
+    geom_text(aes(label=sprintf("%0.1f", cpm)), alpha=1)+
     scale_fill_manual(values=c(WT="#cc546e", SLICK="#4db598"), labels=c(WT="Wild-Type", SLICK="SLICK")) +
     scale_alpha_continuous() +
     ggtitle(sprintf("%s: %s (%s)", name$GOID, name$TERM, name$Direction)) +
@@ -2391,7 +2360,7 @@ mutate(cor.data, value = sprintf("%.03f (%.03f)", r, P)) %>%
 * Meta - Reduced
 
 #+header: :results output file graphics :file meta.reduced.corr.png
-#+header: :width 11 :height 11 :units in :res 150
+#+header: :width 11 :height 11 :units in :res 600
 #+begin_src R :session metab.reduced
 library(Hmisc)
 library(tidyverse)
